fix sentry avatar alignment on activity feed

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -734,7 +734,6 @@
           color: @gray-darker;
           font-size: 16px;
           background: @white;
-          top: -4px;
         }
       }
 
